--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,6 +7,9 @@
   background-size: cover;
   padding: 150px 120px 300px 120px;
   position: relative;
+  &--smaller {
+    padding-bottom: 100px;
+  }
   @media(max-width: $tablet) {
     padding-top: 250px;
   }
